update: schema for api calls
